--- a/index.scss
+++ b/index.scss
@@ -15,7 +15,7 @@ body{
     height: 1000vh;
     margin: 0;
     padding: 0;
-    // overflow: hidden;
+
     overflow-x: hidden;
     font-family: 'Silkscreen';
     scroll-behavior: smooth;
@@ -23,6 +23,23 @@ body{
     p{
         margin: 0;
         padding: 0;
+    }
+
+    .loading{
+        position: fixed;
+        z-index: 3;
+        background-color: black;
+        width: 100vw;
+        height: 100vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        p{
+            margin: 0;
+            padding: 0;
+            color: white;
+            font-size: xx-large;
+        }
     }
 
 
